--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,13 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.10.Final</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 
 	<build>
