--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=iWroteit64
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
+spring.mvc.static-path-pattern=/resources/**
 
 jdj.security.failedLogin.count=2
 jdj.brute.force.cache.max=1000
