--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@ spring.datasource.password=iWroteit64
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
-#server.port=8081
+server.port=8081
 spring.mvc.static-path-pattern=/resources/**
 
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-alias=local_ssl
-server.ssl.key-store=src/main/resources/local-ssl.p12
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=asdfgh
+#server.port=8443
+#server.ssl.enabled=true
+#server.ssl.key-alias=local_ssl
+#server.ssl.key-store=src/main/resources/local-ssl.p12
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-password=asdfgh
 
 jdj.security.failedLogin.count=2
 jdj.brute.force.cache.max=1000
